# oi-pkg-checker

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust-clippy.yml
assets/: README.md
oi-pkg-checker/: Cargo.toml  LICENSE.md  README.md
oi-pkg-checker-core/: Cargo.toml  LICENSE.md  README.md
oi-pkg-checker-core/src/: assets.rs  lib.rs  packages.rs  problems.rs  tests.rs
oi-pkg-checker-core/src/assets/: assets.rs  assets_types.rs  catalog_dependency_c.rs  catalog_encumbered_dependency_c.rs  catalogs_c.rs  open_indiana_oi_userland_git.rs
oi-pkg-checker-core/src/tests/: components_test.rs  de_serialization_test.rs  dependencies_test.rs  package_test.rs  package_versions_test.rs
oi-pkg-checker/src/: cli.rs  logger.rs  main.rs
