[package]
name = "oi-pkg-checker-core"
version = "2.0.1"
edition = "2021"
authors = ["Maroš Telka <maros@telka.sk>"]
description = "Core lib for oi-pkg-checker project"
readme = "README.md"
license = "MIT"
repository = "https://github.com/aueam/oi-pkg-checker"
keywords = ["core", "lib", "pkg", "oi"]

[dependencies]
fmri = "1.0.3"
log = "0.4.20"
serde_json = "1"
bincode = "1.3.3"
serde = { version = "1", features = ["derive"] }

[features]
thread_safe = []