[package]
name = "oi-pkg-checker"
version = "1.0.0"
edition = "2021"
authors = ["Maroš Telka <maros@telka.sk>"]
description = "For finding problems/errors in packages/components in OI"
readme = "README.md"
license = "MIT"
repository = "https://github.com/aueam/oi-pkg-checker"
keywords = ["lib", "pkg", "oi"]

[dependencies]
oi-pkg-checker-core = "0.1.0"
fmri = "0.2.1"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
reqwest = "0.11"
colored = "2.0"