[package]
name = "oi-pkg-checker"
version = "1.1.1"
edition = "2021"
authors = ["Maroš Telka <maros@telka.sk>"]
description = "For finding problems/errors in packages/components in OI"
readme = "README.md"
license = "MIT"
repository = "https://github.com/aueam/oi-pkg-checker"
keywords = ["lib", "pkg", "oi"]

[dependencies]
oi-pkg-checker-core = { path = "../oi-pkg-checker-core" }
fmri = "1.0.2"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
colored = "2.0"
